samples/_failures_safe/1761154738_6bb116_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e27fd52e.c: In function ‘main’:
./samples/SAFE/__tmp_e27fd52e.c:139:5: error: expected declaration or statement at end of input
  139 |     size_t len = strlen(input);
      |     ^~~~~~
